Fixes #506 Text selection color makes text invisible

--- a/public/assets/css/color_scheme/black.css
+++ b/public/assets/css/color_scheme/black.css
@@ -2,21 +2,25 @@
  ******************************************************************/
 
 ::-moz-selection {
-  background: #202020;
+  color: #fff;
+  background-color: #90A4AE;
 }
 
 ::selection {
-  background: #202020;
+  color: #fff;
+  background-color: #90A4AE;
 }
 
 ::-moz-selection {
-  background: #202020;
+  color: #fff;
   /* Firefox */
+  background-color: #90A4AE;
 }
 
 ::-webkit-selection {
-  background: #202020;
+  color: #fff;
   /* Safari */
+  background-color: #90A4AE;
 }
 
 .primary {
