--- a/public/assets/css/compiled/app.css
+++ b/public/assets/css/compiled/app.css
@@ -11325,32 +11325,6 @@ input::-moz-focus-inner {
   padding: 0;
 }
 
-::-moz-selection {
-  color: #fff;
-  text-shadow: none;
-  background: #333;
-}
-
-::selection {
-  color: #fff;
-  text-shadow: none;
-  background: #333;
-}
-
-::-moz-selection {
-  color: #fff;
-  text-shadow: none;
-  background: #333;
-  /* Firefox */
-}
-
-::-webkit-selection {
-  color: #fff;
-  text-shadow: none;
-  background: #333;
-  /* Safari */
-}
-
 button {
   background: none;
   border: 0;
